--- a/app/scss/components/key.scss
+++ b/app/scss/components/key.scss
@@ -86,6 +86,8 @@
 
 @include breakpoint-down(small) {
 	.key {
+		height: auto;
+
 		&--del {
 			font-size: 1.25em;
 		}
